--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,22 +3,29 @@
 <head>
 <meta charset="utf-8" />
 <title>Authentication</title>
+<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
+<link rel="stylesheet" type="text/css" href="../static/css/myStyle.css" th:href="@{css/myStyle.css}" />
 </head>
 <body>
-	<div>
-		<form th:action="@{/login}" method="post">
-			<div>
-				<label>Login:</label>
-				<input type="text" name="username" />
+	<div class="col-md-6 col-sm-6 col-xs-12 spacer">
+		<div class="panel panel-info">
+			<div class="panel-heading">Authentification</div>
+			<div class="panel-body">
+				<form th:action="@{/login}" method="post">
+				<div>
+					<label class="control-label">Login:</label>
+					<input class="form-control" type="text" name="username" placeholder="username" />
+				</div>
+				<div class="form-group">
+					<label class="control-label">Password:</label>
+					<input class="form-control" type="password" name="password" placeholder="password"/>
+				</div>
+				<div>
+					<input class="btn btn-primary" type="submit" value="Login" />
+				</div>
+			</form>
 			</div>
-			<div>
-				<label>Password:</label>
-				<input type="password" name="password" />
-			</div>
-			<div>
-				<input type="submit" value="Login" />
-			</div>
-		</form>
+		</div>
 	</div>
 </body>
 </html>
